Adicionando novas perguntas para serem respondidas

--- a/Procon.ipynb
+++ b/Procon.ipynb
@@ -2502,7 +2502,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Qual a média de dias para arquivar uma reclamção?\n",
+    "\n",
+    "# Qual a média de dias gastos para arquivar reclamações dadas como atendidas?\n",
+    "\n",
+    "# Qual a média de dias gastos para arquivar reclamações dadas como não atendidas?\n",
+    "\n",
+    "#(Importante) É possível prever se: caso uma reclamção demore mais de X dias para ser atendida ela será arquivada sem ser atendida?\n",
+    "\n",
+    "# Qual época do ano obteve um maior número de reclamações?\n",
+    "\n",
+    "# Qual época do ano obteve um maior número de reclamações atendidas?\n",
+    "\n",
+    "# Qual época do ano obteve um maior número de reclamações não atendidas?\n",
+    "\n",
+    "# (Importante) A quantidade de reclamações dadas como Atendidas sofre interferências no meses(ou períodos) em que o número de reclamações foi maior?"
+   ]
   }
  ],
  "metadata": {
